# MonitorBrightnessControl

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: i18n.ts  main.ts  styles.css  ui.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: admin_autostart.rs  auto_dim.rs  commands.rs  config.rs  foreground.rs  hotkeys.rs  lib.rs  main.rs  profiles.rs  scheduler.rs  state.rs  tray.rs
app/src/views/: about.ts  monitors.ts  profiles.ts  settings.ts
crates/brightness-cli/: Cargo.toml
crates/brightness-cli/src/: main.rs
crates/brightness-cli/tests/: cli.rs
crates/brightness-core/: Cargo.toml
crates/brightness-core/src/: caps.rs  ddc.rs  edid.rs  error.rs  lib.rs  monitor.rs  vcp.rs
crates/brightness-core/src/platform/: linux.rs  macos.rs  mod.rs  stub.rs  windows.rs
docs/: ARCHITECTURE.md  BUILDING.md  PRIVACY.md
docs/screenshots/: README.md
packaging/: generate-icons.ps1
packaging/linux/: 90-monitor-brightness.rules  io.github.monitorbrightnesscontrol.app.yml  monitor-brightness-control.desktop
packaging/macos/: entitlements.plist
packaging/windows/: AppxManifest.xml  Resources.resw
scripts/: bump-version.sh
