[workspace]
resolver = "2"
members = [
    "crates/brightness-core",
    "crates/brightness-cli",
    "app/src-tauri",
]

[workspace.package]
version = "1.0.8"
edition = "2024"
rust-version = "1.85"
authors = ["kingchenc"]
license = "LicenseRef-Proprietary"
repository = "https://github.com/kingchenc/MonitorBrightnessControl"
homepage = "https://github.com/kingchenc/MonitorBrightnessControl"

[workspace.dependencies]
# Shared
thiserror = "2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"
bitflags = "2"

# Core (platform impls pull more in their own Cargo.toml via cfg)
# CLI
clap = { version = "4", features = ["derive"] }

# App
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", default-features = false }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
sunrise = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
incremental = false

[profile.release-dev]
inherits = "release"
lto = "thin"
codegen-units = 16
strip = false
debug = "line-tables-only"
incremental = true

[profile.dev]
opt-level = 1
debug = true
