[package]
name = "brightness-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for cross-platform monitor brightness and DDC/CI control."

[[bin]]
name = "mbc"
path = "src/main.rs"

[dependencies]
brightness-core = { path = "../brightness-core", features = ["serde"] }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
env_logger.workspace = true
log.workspace = true
anyhow.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
